# freeswitch

./: Freeswitch.2017.sln
src/: switch.c  switch_odbc.c
src/mod/applications/mod_alkcom/: Makefile.am  mod_alkcom.2017.vcxproj  mod_alkcom.c
src/mod/applications/mod_callcenter/: mod_callcenter.c
src/mod/endpoints/mod_sofia/: sofia_glue.c
src/mod/languages/mod_managed/managed/: FreeSWITCH.Managed.2017.csproj
